Add text to file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  Intense Mint Dark Chocolate
 
+  85% Cocoa
+
+  This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.
+
+  Buy now
 </body>
 </html>
