--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  Intense Mint Dark Chocolate
-
-  85% Cocoa
-
-  This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.
-
-  Buy now
+  <div>
+  <h2>Intense Mint Dark Chocolate</h2>
+    <strong>85% Cocoa</strong>
+    <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+    <a href="">Buy now</a>
+  </div>
+  <div>
+    <img src="images/placeholder-4by3.svg">
+  </div>
 </body>
 </html>
