Add first set of media queries

--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <div>
-  <h2>Intense Mint Dark Chocolate</h2>
-    <strong>85% Cocoa</strong>
-    <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
-    <a href="">Buy now</a>
-  </div>
-  <div>
-    <img src="images/placeholder-4by3.svg">
-  </div>
+  <section>
+    <div class="wrapper">
+      <div class="content">
+        <h1>Intense Mint Dark Chocolate</h1>
+        <strong>85% Cocoa</strong>
+        <p>This super intense mint-flavoured 85% dark chocolate will enrich your senses and enlighten your soul—not to mention the fresh mouth feeling.</p>
+        <a href="">Buy now</a>
+      </div>
+      <div class="photo">
+        <img class="img-flex" src="images/placeholder-4by3.svg" alt="">
+      </div>
+    </div>
+  </section>
 </body>
 </html>
